[package]
name = "dlm"
version = "0.4.5"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "Minimal download manager"
repository = "https://github.com/agourlay/dlm"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "http", "download", "download-manager"]
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.22", default-features = false, features = [
    "http2",
    "gzip",
    "rustls-tls",
] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio = { version = "1.47.0", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "signal",
] }
tokio-util = "0.7.15"
tokio-retry = "0.3.0"
async-channel = "2.5.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["cargo"] }
indicatif = "0.18.0"
thiserror = "2.0.12"
rand = "0.9.2"
