[package]
name = "dlm"
version = "0.5.1"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "Minimal download manager"
repository = "https://github.com/agourlay/dlm"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["http", "download", "download-manager"]
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.13.1", default-features = false, features = [
    "http2",
    "gzip",
    "rustls",
] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "signal",
] }
tokio-util = "0.7.18"
tokio-retry = "0.3.0"
async-channel = "2.5.0"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["cargo"] }
indicatif = "0.18.3"
thiserror = "2.0.18"
rand = "0.9.2"

[profile.release]
lto = "fat"
codegen-units = 1