[package]
name = "dlm"
version = "0.7.2"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "Minimal download manager"
repository = "https://github.com/agourlay/dlm"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["http", "download", "download-manager"]
edition = "2024"

[dependencies]
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = [
    "http2",
    "gzip",
    "rustls",
] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "signal",
    "process",
    "time",
] }
tokio-util = "0.7.18"
async-channel = "2.5.0"
clap = { version = "4.6.1", features = ["cargo"] }
indicatif = "0.18.4"
thiserror = "2.0.18"
rand = "0.10.1"
jiff = "0.2.28"
percent-encoding = "2.3.2"
base64 = "0.22.1"

[dev-dependencies]
axum = "0.8.9"
tempfile = "3.27.0"

[profile.release]
lto = "fat"
codegen-units = 1
